--- a/html/pfappserver/root/config/switch/view.tt
+++ b/html/pfappserver/root/config/switch/view.tt
@@ -81,8 +81,8 @@
                     [% trigger.field('value').render_element | none %]
                   </td>
                   <td class="action">
-                    <a class="btn-icon" href="#add"><i class="icon-plus-sign"></i></a>
-                    <a class="btn-icon" href="#delete"><i class="icon-minus-sign"></i></a>
+                    <a class="btn-icon" href="#add"><i class="icon-plus-circle"></i></a>
+                    <a class="btn-icon" href="#delete"><i class="icon-minus-circle"></i></a>
                   </td>
                 </tr>
                 [% END -%]
