--- a/html/pfappserver/root/configuration/section.tt
+++ b/html/pfappserver/root/configuration/section.tt
@@ -1,17 +1,20 @@
- <h3>[% l(section) %]</h3>
+<div class="card">
+  <div class="card-title">
+    <h2>[% l(section) %]</h2>
 
 [% IF section == "maintenance" %]
 <div class="alert alert-warning">
     <strong>[% l('Note: ') %]</strong>[% l('Modifying any of theses values requires to restart \'pfmon\' service to be effective.') %]
 </div>
 [% END %]
+  </div>
 
   <form name="section" class="form-horizontal" action="[% c.uri_for(c.action,section) %]" method="POST">
-
+    <div class="card-block">
 [% FOREACH field IN form.fields %]
   [% form.field(field.name).render | none %]
 [% END %]
-
+    </div>
     [%- IF can_access("CONFIGURATION_MAIN_UPDATE") %]
     <div class="form-actions">
       <button type="submit" class="btn btn-primary">[% l('Save') %]</button>
@@ -19,3 +22,4 @@
     </div>
     [%- END %]
   </form>
+</div>
