--- a/html/pfappserver/root/user/view.tt
+++ b/html/pfappserver/root/user/view.tt
@@ -116,8 +116,8 @@
                           [% field_value.render_element | none %]
                         </td>
                         <td class="action">
-                          <a class="btn-icon" href="#add"><i class="icon-plus-sign"></i></a>
-                          <a class="btn-icon[% ' hidden' IF loop.size == 2 %]" href="#delete"><i class="icon-minus-sign"></i></a>
+                          <a class="btn-icon" href="#add"><i class="icon-plus-circle"></i></a>
+                          <a class="btn-icon[% ' hidden' IF loop.size == 2 %]" href="#delete"><i class="icon-minus-circle"></i></a>
                         </td>
                       </tr>
                       [% END -%]
