--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -37,11 +37,7 @@
   </div>
 [% END -%]
 [%  jsFiles = [
-        'app/jquery-ui',
-        'app/bootstrap-datepicker',
         'app/bootstrap-timepicker',
-        'app/chosen.jquery.min',
-        'app/jquery.ba-hashchange',
         'app/raphael/raphael-min',
         'app/raphael/g.raphael-min',
         'app/raphael/g.bar-min',
@@ -52,20 +48,14 @@
         'app/uri',
         'admin/nodes',
         'admin/searches',
-        'js/bootstrapSwitch',
         'js/node',
         'js/user',
         ]
      cssFiles = [
-        'app/bootstrap-datepicker',
         'app/bootstrap-timepicker',
-        'css/bootstrapSwitch',
         ] -%]
 
 <style type="text/css">
-form {
-    margin-bottom: 0px;
-}
 .bootstrap-timepicker table {
     width: 160px;
 }
@@ -157,12 +147,14 @@ form {
     </div>
 
     [% INCLUDE admin/saved_search.inc savedSearchController="SavedSearch::Node" method="POST" %] 
-    <div class="container-fluid">
+    <div class="sidenav-fluid">
       <div class="row-fluid">
-        <div class="span2">
-          <div class="sidebar-nav well">
+        <div class="sidenav sidenav-section span3">
+            <ul class="nav nav-header">
+              <li>[% l('Nodes') %]</li>
+              <div class="divider-horizontal"></div>
+            </ul>
             <ul class="nav nav-list">
-              <li class="nav-header">[% l('Nodes') %]</li>
               [%- IF can_access("NODES_READ") -%]
               <li class="active"><a href="#">[% l('Search') %]</a></li>
               [%- END -%]
@@ -312,17 +304,21 @@ form {
               [%END%]
               [%- END -%]
             </ul>
-          </div><!--/.well -->
         </div><!--/span-->
         <form id="search" action="[% c.uri_for(c.controller('Node').action_for('search')) %]"></form>
-        <div class="span10">
+      </div><!--/.row-fluid-->
+    </div><!--/.sidenav-fluid-->
+    <div class="row-fluid">
+      <div class="container-fluid offset3 span15">
+        <div class="card">
+          <div class="card-title">
             <div class="tabbable">
               <div class="tab-content">
                 <ul class="nav nav-tabs">
                   <li class="active"><a href="#simple" data-toggle="tab">[% l('Simple') %]</a></li>
                   <li><a href="#advanced" data-toggle="tab">[% l('Advanced') %]</a></li>
                 </ul>
-                <div class="tab-pane active well" id="simple">
+                <div class="tab-pane active" id="simple">
                   <form id="simpleNodeSearch" method="POST" name="simpleNodeSearch" class="form-inline" action="[% c.uri_for(c.controller('Node').action_for('simple_search')) %]">
                   <table style="width:100%">
                     <tbody>
@@ -346,7 +342,7 @@ form {
                         <td>
                           <div class="btn-group pull-right">
                             <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
-                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-up"></span></a>
+                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="icon-chevron-up"></span></a>
                             <ul class="dropdown-menu up" role="menu">
                               <li><a href="#" data-export-url="[% c.uri_for(c.controller('Node').action_for('search')) %]" data-export-form="#simpleNodeSearch" class="exportCSVBtn">[% l('Export to CSV') %]</a></li>
                               <li><a href="#" id="simpleSavedSearchBtn">[% l('Save as...') %]</a></li>
@@ -358,20 +354,10 @@ form {
                   </table>
                   </form>
                 </div>
-                <div class="tab-pane well" id="advanced">
+                <div class="tab-pane" id="advanced">
                   <form id="advancedSearch" name="advancedNodeSearch" method="POST" class="form-inline" action="[% c.uri_for(c.controller('Node').action_for('advanced_search')) %]">
-                  <br/>
                   <table id="advancedSearchConditions" class="table-dynamic">
                     <thead data-no-remove="yes">
-                        <tr>
-                        <th colspan="2" class="pull-left">
-                          <div class="control-group">
-                            <div class="controls">
-                            [% INCLUDE per_page_select.tt %]
-                            </div>
-                          </div>
-                        </th>
-                        </tr>
                         <tr>
                           <th colspan="2" class="pull-left">
                           <div class="control-group">
@@ -416,12 +402,12 @@ form {
                       <tr class="hidden dynamic-row">
                         <td>
                          <div class="control-group">
-                         [% PROCESS search_options disabled=1 %]
+                           [% PROCESS search_options disabled=1 %]
                          </div>
                         </td>
                         <td class="action">
-                          <a class="btn-icon" href="#add"><i class="icon-plus-sign"></i></a>
-                          <a class="btn-icon" href="#delete"><i class="icon-minus-sign"></i></a>
+                          <a class="btn-icon" href="#add"><i class="icon-plus-circle"></i></a>
+                          <a class="btn-icon" href="#delete"><i class="icon-minus-circle"></i></a>
                         </td>
                       </tr>
                       <tr class="dynamic-row">
@@ -431,8 +417,8 @@ form {
                          </div>
                         </td>
                         <td class="action">
-                          <a class="btn-icon" href="#add"><i class="icon-plus-sign"></i></a>
-                          <a class="btn-icon" href="#delete"><i class="icon-minus-sign"></i></a>
+                          <a class="btn-icon" href="#add"><i class="icon-plus-circle"></i></a>
+                          <a class="btn-icon" href="#delete"><i class="icon-minus-circle"></i></a>
                         </td>
                       </tr>
                     </tbody>
@@ -450,10 +436,20 @@ form {
                         </td>
                       </tr>
                       <tr>
-                        <td colspan="2" style="padding-top: 1em">
+                        <td>&nbsp;</td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="control-group">
+                            <div class="controls">
+                            [% INCLUDE per_page_select.tt %]
+                            </div>
+                          </div>
+                        </td>
+                        <td>
                           <div class="btn-group pull-right">
                             <button class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
-                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-up"></span></a>
+                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="icon-chevron-up"></span></a>
                             <ul class="dropdown-menu up">
                               <li><a id="advancedSavedSearchBtn" >[% l('Save as...') %]</a></li>
                               <li><a href="#" data-export-url="[% c.uri_for(c.controller('Node').action_for('search')) %]" data-export-form="#advancedSearch" class="exportCSVBtn">[% l('Export to CSV') %]</a></li>
@@ -466,10 +462,12 @@ form {
                 </div>
               </div>
             </div>
-          </form>
-          <div class="loader span12"><p><img src="[% c.uri_for('/static/app/loader-48.gif') %]"></p></div>
-          <div class="row-fluid nodes" id="section">
+            </form>
           </div>
+
+          <div class="loader span12"><p><img src="[% c.uri_for('/static/app/loader-48.gif') %]"></p></div>
+            <div class="nodes card-block" id="section">
+            </div>
         </div><!--/span-->
       </div><!--/row-->
     </div><!--/.fluid-container-->
