--- a/html/pfappserver/root/config/billingtiers/list.tt
+++ b/html/pfappserver/root/config/billingtiers/list.tt
@@ -10,12 +10,14 @@
           <tr>
             <td class="item"><a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
             <td>
+              <div class="text-right">
               [%- IF can_access("BILLING_TIER_CREATE") %]
               <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
               [%- END %]
               [%- IF can_access("BILLING_TIER_DELETE") %]
               <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>
               [%- END %]
+              </div>
             </td>
           </tr>
           [% END -%]
