--- a/html/pfappserver/root/config/filters/index.tt
+++ b/html/pfappserver/root/config/filters/index.tt
@@ -1,6 +1,8 @@
 
-<h4 class="alert alert-warning">[% l('This is an advanced section. Proceed with caution when editing.') %]</h4>
+<p class="p3 p-warning">[% l('This is an advanced section. Proceed with caution when editing.') %]</p>
 
+<div class="card">
+  <div class="card-block">
 <div class="tab-content">
   <ul class="nav nav-tabs">
     <li [% IF tab == 'vlan-filters' %]class="active"[% END %]>
@@ -32,5 +34,7 @@
       </form>
     </div>
   [% END %]
+</div>
+  </div>
 </div>
 
