--- a/html/pfappserver/root/config/floatingdevice/index.tt
+++ b/html/pfappserver/root/config/floatingdevice/index.tt
@@ -15,12 +15,18 @@
         </div>
       </div>
 
-      <h2>[% l('Floating Devices') %]</h2>
+      <div class="card">
+        <div class="card-title">
+          <h2>[% l('Floating Devices') %]</h2>
+        </div>
 
-      [% INCLUDE config/floatingdevice/list.tt %]
+        <div class="card-block">
+          [% INCLUDE config/floatingdevice/list.tt %]
+        </div>
 
       [%- IF can_access("FLOATING_DEVICES_CREATE") %]
       <div class="form-actions">
         <a class="btn createItem" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add floating device') %]</a>
       </div>
       [%- END %]
+      </div>
