--- a/html/pfappserver/root/config/portal_module/view.tt
+++ b/html/pfappserver/root/config/portal_module/view.tt
@@ -23,8 +23,13 @@
 [%ELSE%]
 [% SET action_uri = c.req.uri %]
 [%END%]
+
 <form name="formItem" class="form-horizontal form-condensed" action="[% action_uri %]" method="post">
-  <h3>[% IF item.id.defined %]<i>[% l(item.type) %]</i> [% item.id | html %][% ELSE %][% l('New portal module') %][% END %]</h3>
+  <div class="card">
+    <div class="card-title">
+      <h2>[% IF item.id.defined %]<i>[% l(item.type) %]</i> [% item.id | html %][% ELSE %][% l('New portal module') %][% END %]</h2>
+    </div>
+    <div class="card-block">
 
   <div>
   [%- IF item.id.defined;
@@ -66,6 +71,7 @@
     [% form.block('multi_source_definition').render | none %]
   </div>
   [% END %]
+  </div>
 
   [%- IF can_access("PORTAL_MODULE_UPDATE") %]
   <div class="form-actions">
@@ -73,6 +79,6 @@
     [% IF source.id %]<button type="reset" class="btn">[% l('Reset') %]</button>[% END %]
   </div>
   [%- END %]
-
+</div>
 </form>
 
