--- a/html/pfappserver/root/config/profiling/index.tt
+++ b/html/pfappserver/root/config/profiling/index.tt
@@ -1,5 +1,7 @@
-<h4 class="alert alert-warning">[% l('This section is for profiling. Fingerbank will help you every device type.') %]</h4>
+<p class="p3 p-info">[% l('This section is for profiling. Fingerbank will help you every device type.') %]</p>
 
+<div class="card">
+  <div class="card-block">
 <div id="tabView">
   <ul class="nav nav-tabs">
     <li [% IF tab == 'general settings' %]class="active"[% END %]>
@@ -33,5 +35,7 @@
 <div class="tab-content">
   <div class="tab-pane fade" id="newTabView">
   </div><!--tab-pane-->
+</div>
+</div>
 </div>
 </div>
