--- a/html/pfappserver/root/config/scans/index.tt
+++ b/html/pfappserver/root/config/scans/index.tt
@@ -1,5 +1,7 @@
-<h4 class="alert alert-warning">[% l('This section is for scanners. you will be able to configure scan engine nad rules here.') %]</h4>
+<p class="p3 p-info">[% l('This section is for scanners. you will be able to configure scan engine and rules here.') %]</p>
 
+<div class="card">
+  <div class="card-block">
 <div id="tabView">
   <ul class="nav nav-tabs">
     <li [% IF tab == 'scan engines' %]class="active"[% END %]>
@@ -12,5 +14,7 @@
 <div class="tab-content">
   <div class="tab-pane fade" id="newTabView">
   </div><!--tab-pane-->
+</div>
+</div>
 </div>
 </div>
