--- a/html/pfappserver/root/config/switch/index.tt
+++ b/html/pfappserver/root/config/switch/index.tt
@@ -14,7 +14,9 @@
           <a href="#" class="btn btn-primary btn-danger"><i class="icon-trash"></i> [% l('Delete') %]</a>
         </div>
       </div>
-      
+
+      <div class="card">
+        <div class="card-block">
       <div class="tab-content">
         <ul class="nav nav-tabs">
           <li [% IF controller_namespace == 'Config::Switch' %]class="active" [% END %]>
@@ -32,7 +34,7 @@
 
         [% IF controller_namespace == 'Config::Switch' %]
           <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">[% l('Add switch to group') %] <span class="caret"></span></a>
+            <a class="btn dropdown-toggle" data-toggle="dropdown">[% l('Add switch to group') %] <span class="caret"></span></a>
             <ul class="dropdown-menu">
               [% FOREACH group IN switch_groups %]
               <li><a class="createSwitch" href="[% c.uri_for(c.controller.action_for('create_in_group'), group) %]">[% group %]</a></li>
@@ -46,3 +48,5 @@
         [% END %]
       </div>
       [%- END %]
+        </div>
+      </div>
